--- a/Frontend/parth-traders/src/app/user/product/product.component.html
+++ b/Frontend/parth-traders/src/app/user/product/product.component.html
@@ -9,16 +9,16 @@
         <div class="colors-large">
             <ul>
                 <li>
-                    <a href="" style="background: #222"><span></span></a>
+                    <a href="" (click)="changeColor()" style="background: #222"><span></span></a>
                 </li>
                 <li>
-                    <a href="" style="background: #6e8cd5"><span></span></a>
+                    <a href="" (click)="changeColor()" style="background: #6e8cd5"><span></span></a>
                 </li>
                 <li>
-                    <a href="" style="background: #f56060"><span></span></a>
+                    <a href="" (click)="changeColor()" style="background: #f56060"><span></span></a>
                 </li>
                 <li>
-                    <a href="" style="background: #44c28d"><span></span></a>
+                    <a href="" (click)="changeColor()" style="background: #44c28d"><span></span></a>
                 </li>
             </ul>
         </div>
@@ -33,15 +33,15 @@
             <span>XXL</span>
         </div>
 
-        <button class="add-cart-large">Add To Cart</button>
+        <button class="add-cart-large" (click)="addCartLarge()">Add To Cart</button>
     </div>
-    <div class="make3D">
+    <div class="make3D" (mouseenter)="liftCard()" (mouseleave)="dropCard()">
         <div class="product-front">
             <div class="shadow"></div>
             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/245657/1.jpg" alt="" />
             <div class="image_overlay"></div>
-            <div class="add_to_cart">Add to cart</div>
-            <div class="view_gallery">View gallery</div>
+            <div class="add_to_cart" (click)="addToCart()">Add to cart</div>
+            <div class="view_gallery" (click)="flipCardToBack()">View gallery</div>
             <div class="stats">
                 <div class="stats-container">
                     <span class="product_price">${{ product.price }}</span>
@@ -88,7 +88,7 @@
                     </div>
                 </div>
             </div>
-            <div class="flip-back">
+            <div class="flip-back" (click)="flipCardToFront()">
                 <div class="cy"></div>
                 <div class="cx"></div>
             </div>
